# examplerobot

./: CMakeLists.txt  README.md  package.xml
blender/: examplerobot_blender.md  examplerobot_blender.py
chatgpt/: Dockerfile  docker-compose.yaml  entrypoint.sh  sdf_examples
docker/: Dockerfile  docker-compose.yaml  examplerobot_entrypoint.sh  examplerobot_gazebo.bash  examplerobot_interface.bash  examplerobot_pid.bash  moveit_demo.bash
examplerobot_description/: CMakeLists.txt  package.xml
examplerobot_description/config/: dh_parameters.txt  (+1 more)
examplerobot_gazebo/: CMakeLists.txt  README.md  package.xml
examplerobot_interface/: CMakeLists.txt  package.xml
examplerobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
examplerobot_moveit_config/config/: constraints.yaml  examplerobot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
examplerobot_moveit_config/docker/: examplerobot_interface.bash
examplerobot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  examplerobot_interface.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
launch/: examplerobot_interface.launch
src/: examplerobot_interface.cpp
(+180 files in other folders)
